[gd_scene load_steps=21 format=3 uid="uid://dy3t6hvcil60e"]

[ext_resource type="Script" uid="uid://cnpusboltdpr3" path="res://scripts/player.gd" id="1_g2els"]
[ext_resource type="Texture2D" uid="uid://cpcqp2c514tx3" path="res://assets/effects/heal.png" id="2_lrhn5"]
[ext_resource type="Texture2D" uid="uid://blfh14oe8jro7" path="res://assets/effects/slash2.png" id="2_rkhd4"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2cgup"]
atlas = ExtResource("2_lrhn5")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5ia6"]
atlas = ExtResource("2_lrhn5")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_0dpix"]
atlas = ExtResource("2_lrhn5")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_2hyy3"]
atlas = ExtResource("2_lrhn5")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_irmqu"]
atlas = ExtResource("2_lrhn5")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7eonc"]
atlas = ExtResource("2_lrhn5")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_50cep"]
atlas = ExtResource("2_lrhn5")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yvht"]
atlas = ExtResource("2_lrhn5")
region = Rect2(672, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_lagn4"]
atlas = ExtResource("2_lrhn5")
region = Rect2(768, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8k1v"]
atlas = ExtResource("2_lrhn5")
region = Rect2(864, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ih8y6"]
atlas = ExtResource("2_lrhn5")
region = Rect2(960, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_lrhn5"]
atlas = ExtResource("2_rkhd4")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_my7n2"]
atlas = ExtResource("2_rkhd4")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dp8ca"]
atlas = ExtResource("2_rkhd4")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0lw5n"]
atlas = ExtResource("2_rkhd4")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_2cgup"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2cgup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5ia6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0dpix")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2hyy3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_irmqu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7eonc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_50cep")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yvht")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lagn4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8k1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ih8y6")
}],
"loop": false,
"name": &"heal",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrhn5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_my7n2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dp8ca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0lw5n")
}],
"loop": false,
"name": &"slash",
"speed": 10.0
}]

[sub_resource type="SpriteFrames" id="SpriteFrames_f1ej7"]
animations = [{
"frames": [],
"loop": true,
"name": &"idle",
"speed": 10.0
}]

[node name="character" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
script = ExtResource("1_g2els")

[node name="particles" type="CPUParticles2D" parent="."]
position = Vector2(0, 35)
emitting = false
amount = 20
gravity = Vector2(0, 0)
initial_velocity_min = 50.0
initial_velocity_max = 100.0

[node name="vfx" type="AnimatedSprite2D" parent="."]
z_index = 20
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_2cgup")
animation = &"heal"
frame_progress = 1.0

[node name="main_sprite" type="AnimatedSprite2D" parent="."]
z_index = 10
sprite_frames = SubResource("SpriteFrames_f1ej7")
animation = &"idle"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="WeaponPivot" type="Node2D" parent="."]

[node name="AttackArea" type="Area2D" parent="WeaponPivot"]
collision_layer = 4
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="WeaponPivot/AttackArea"]
